# XHS-Paper-Engine

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  auto_run.py  com.xhs-paper-engine.auto.plist  config.yaml  pyproject.toml  requirements.txt  run_daily.sh  setup_schedule.sh
.github/workflows/: ci.yml
docker/: pdffigures2.Dockerfile
dp_core/: __init__.py  agent.py  analytics.py  api_client.py  checkpoint.py  config.py  dedup.py  extract_figures_tables.py  logger.py  retry.py  scheduler.py
dp_core/publishers/: __init__.py  xiaohongshu.py
dp_core/tools/: __init__.py  analytics_tools.py  base.py  paper_tools.py  publish_tools.py  vision_optimization_tools.py  writing_tools.py
launchd/: com.xhs-paper-engine.afternoon.plist  com.xhs-paper-engine.morning.plist
scripts/: build_pdffigures2_jar.sh  setup_env.ps1  setup_env.sh  setup_env_uv.ps1  setup_env_uv.sh
tests/: test_agent_fc.py  test_agent_parse.py  test_config.py  test_dedup.py  test_providers.py  test_publish_utils.py  test_retry.py  test_scheduler.py  test_tasks.py  test_tool_base.py  test_writing_utils.py
