[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xhs-paper-engine"
version = "0.1.0"
description = "基于 ReAct Agent 的自动论文推荐和发布系统"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "XHS Paper Engine Contributors"}
]
keywords = ["arxiv", "paper", "agent", "llm", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.23.0",
    "playwright>=1.40.0",
    "markdown>=3.5.0",
    "pytz>=2023.3",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/xhs-paper-engine"
Issues = "https://github.com/yourusername/xhs-paper-engine/issues"

[project.scripts]
xhs-paper-engine = "auto_run:run"

[tool.setuptools]
packages = ["dp_core"]

[tool.setuptools.package-data]
dp_core = ["*.yaml", "*.json"]

# ============================================
# Black 配置
# ============================================
[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'

# ============================================
# isort 配置
# ============================================
[tool.isort]
profile = "black"
line_length = 100

# ============================================
# MyPy 配置
# ============================================
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# ============================================
# Pytest 配置
# ============================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
